fixed bug in faster particle field creation notebook

--- a/paper3/forcing/scavenging-new-field.ipynb
+++ b/paper3/forcing/scavenging-new-field.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "placed-collectible",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "conservative-danish",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "selective-silicon",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "c5e83c6a-06bc-445f-b521-455cd1effae8",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "def5d73e-ab07-4039-b748-d9d9d33703cb",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "f9399c76-86c2-4e47-b89a-35389b04b16a",
    "metadata": {},
    "outputs": [],
@@ -166,15 +166,15 @@
     "    \n",
     "    if save:\n",
     "        save_file(save_folder, lithogenic_field_final, biogenic_field_final, year, month)\n",
-    "        \n",
+    "\n",
     "    create_fields.counter += 1\n",
-    "    \n",
-    "    return"
+    "\n",
+    "    return bio_max"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "fe266ac1-8a5e-4ed0-a504-b38dcc2908bb",
    "metadata": {},
    "outputs": [],
@@ -182,9 +182,9 @@
     "def find_max(alpha=1):\n",
     "    # use to identify year in which maximum occurs so that moving forward, I only need to load that year\n",
     "    n = 0\n",
-    "    max_litho_list   = np.empty(len(range(4,9))); max_litho_list[:]   = np.nan;\n",
-    "    max_biomass_list = np.empty(len(range(4,9))); max_biomass_list[:] = np.nan;\n",
-    "    max_fpop_list    = np.empty(len(range(4,9))); max_fpop_list[:]    = np.nan;\n",
+    "    max_litho_list   = np.empty(len(range(5,9))); \n",
+    "    max_biomass_list = np.empty(len(range(5,9))); \n",
+    "    max_fpop_list    = np.empty(len(range(5,9))); \n",
     "\n",
     "    # year of maximum biomss\n",
     "    year = 2012\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "22259dd9-c440-45b8-b479-d594d251b909",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "65fb6ca5-1d72-448a-899e-4b06573c61ae",
    "metadata": {},
    "outputs": [
@@ -258,22 +258,15 @@
     "# Set field creation counter for this set of parameters to zero at the start:\n",
     "create_fields.counter = 0\n",
     "\n",
+    "bio_maxm = np.nan\n",
     "for month in range(1,13):   \n",
-    "    create_fields(f'{save_folder}', 2002, month, save=True,\\\n",
-    "                 alpha=0.1, beta=0.005, exponent=2./3., litho_max=1.833e-7, bio_max=np.nan)\n",
+    "    bio_maxm = create_fields(f'{save_folder}', 2002, month, save=True,\\\n",
+    "                             alpha=0.1, beta=0.005, exponent=2./3., litho_max=1.833e-7, bio_max=bio_maxm)\n",
     "    \n",
     "    \n",
     "# Reset create_fields counter to zero at the end\n",
     "create_fields.counter = 0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6291e286-ea40-46f0-8463-2f34f65adfde",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
