--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "13f1db7f-3cba-4cd6-8cbf-9eed4ec4dd5d",
    "metadata": {},
    "outputs": [],
@@ -211,12 +211,14 @@
     "    biop_ANHA4[np.isnan(biop_ANHA4)] = np.nanmean(biop_ANHA4)\n",
     "    \n",
     "    # Sum fpop and biomass_p\n",
-    "    sum_bio = np.add(fpop_sink, biop_ANHA4) \n",
+    "    sum_bio = np.add(0.5*fpop_sink, biop_ANHA4) \n",
     "    \n",
-    "#     # 2/3 power\n",
-    "#     bio_nonlinear = sum_bio**(2./3.)\n",
+    "    # 2/3 power\n",
+    "    bio_nonlinear = sum_bio**(2./3.)\n",
+    "    # 1/2 power\n",
+    "#     bio_nonlinear = sum_bio**(1./2.)\n",
     "    # 1/3 power\n",
-    "    bio_nonlinear = sum_bio**(1./3.)\n",
+    "#     bio_nonlinear = sum_bio**(1./3.)\n",
     "    \n",
     "    # interpolate from ANHA4 to ANHA12 grid:\n",
     "    ANHA12_bio = np.empty((50,isize,jsize))\n",
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
    "metadata": {},
    "outputs": [],
@@ -281,7 +283,7 @@
     "        if np.isnan(beta):\n",
     "            print('need to define beta')\n",
     "        else:\n",
-    "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/biomass-nonlinear-1-3/'\n",
+    "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/biomass-nonlinear-2-3-fpop-05/'\n",
     "            betas  = [0.005]\n",
     "            save_file(f'{folder}', lithogenic_particles*betas[0], biogenic_particles_filled*(1-betas[0]), year, month)\n",
     "    \n",
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "54e9cb1a-44a6-4db1-a9c9-b05af5bfbbd0",
    "metadata": {},
    "outputs": [
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ef111897-7161-4d3e-8906-ad1a25c39ad5",
    "metadata": {},
    "outputs": [
@@ -362,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.09354602545499802\n",
+      "0.008565124124288559\n",
       "1.8331377305003116e-07\n"
      ]
     }
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "434d3957-2aea-4238-8706-6d76e02646cd",
    "metadata": {},
    "outputs": [
@@ -417,7 +419,7 @@
     "for year in range(2002, 2003):\n",
     "    for month in range(1,13):\n",
     "        print(year, month)\n",
-    "        litho, bio = create_particle_fields(year, month, max_bio=9.3546e-2, max_litho=1.83314e-7, save=True, beta=0.00)"
+    "        litho, bio = create_particle_fields(year, month, max_bio=2.86113e-2, max_litho=1.83314e-7, save=True, beta=0.00)"
    ]
   },
   {
