--- a/paper3/particle-tracking/run-parcels-fixed.ipynb
+++ b/paper3/particle-tracking/run-parcels-fixed.ipynb
@@ -399,7 +399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -413,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
