current version of scavenging forcing creation

--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "13f1db7f-3cba-4cd6-8cbf-9eed4ec4dd5d",
    "metadata": {},
    "outputs": [],
@@ -199,26 +199,24 @@
     "    biop_ANHA4   = dset_bio['biomass_p'][:,:,:].values # biomass concentration in phosphate units (mol P/m3)\n",
     "     \n",
     "    # Convert sinking particulate organic matter in phosphate units by dividing by the sinking rate:\n",
-    "    # Sinking rate info comes from pg. 43-44 Laura Castro de la Guardia's thesis\n",
+    "    # Sinking rate info comes from pg. 43-44 Laura Castro de la Guardia's thesis, same as BLING general paper\n",
     "    wsink              = np.ones(ANHA4_depths.shape)*16/(3600*24) # convert from m/day to m/s\n",
     "    wsink[depths > 80] = (0.05*(ANHA4_depths[ANHA4_depths > 80]-80)+16)/(3600*24) \n",
     "    fpop_sink          = np.array([fpop_ANHA4[d,:,:] / wsink[d] for d in range(0,len(ANHA4_depths))])\n",
     "    \n",
     "    # Fill NaN and negative values with zero:\n",
+    "    fpop_ANHA4[fpop_ANHA4 < 0]       = 0\n",
     "    fpop_sink[fpop_sink < 0]         = 0\n",
     "    biop_ANHA4[biop_ANHA4 < 0]       = 0\n",
+    "    fpop_ANHA4[np.isnan(fpop_ANHA4)] = np.nanmean(fpop_ANHA4)\n",
     "    fpop_sink[np.isnan(fpop_sink)]   = np.nanmean(fpop_sink)\n",
     "    biop_ANHA4[np.isnan(biop_ANHA4)] = np.nanmean(biop_ANHA4)\n",
     "    \n",
     "    # Sum fpop and biomass_p\n",
-    "    sum_bio = np.add(0.5*fpop_sink, biop_ANHA4) \n",
+    "    sum_bio = fpop_sink #np.add(fpop_sink, biop_ANHA4) \n",
     "    \n",
-    "    # 2/3 power\n",
-    "    bio_nonlinear = sum_bio**(2./3.)\n",
     "    # 1/2 power\n",
-    "#     bio_nonlinear = sum_bio**(1./2.)\n",
-    "    # 1/3 power\n",
-    "#     bio_nonlinear = sum_bio**(1./3.)\n",
+    "    bio_nonlinear = sum_bio**(0.15)\n",
     "    \n",
     "    # interpolate from ANHA4 to ANHA12 grid:\n",
     "    ANHA12_bio = np.empty((50,isize,jsize))\n",
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
    "metadata": {},
    "outputs": [],
@@ -283,11 +281,30 @@
     "        if np.isnan(beta):\n",
     "            print('need to define beta')\n",
     "        else:\n",
-    "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/new-bio-proxy/biomass-nonlinear-2-3-fpop-05/'\n",
-    "            betas  = [0.005]\n",
+    "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/fpop-sink-015-b05/'\n",
+    "            betas  = [0.5]#[0.005]\n",
     "            save_file(f'{folder}', lithogenic_particles*betas[0], biogenic_particles_filled*(1-betas[0]), year, month)\n",
     "    \n",
-    "    return ANHA12_litho, ANHA12_biogenic"
+    "    return ANHA12_litho, ANHA12_biogenic\n",
+    "\n",
+    "# def create_particle_fields(year, month):\n",
+    "\n",
+    "#     fpop, fpops, biop = load_bio(year, month)\n",
+    "#     ANHA12_oMn        = load_litho(year, month)\n",
+    "    \n",
+    "#     ANHA12_litho = np.ones(mesh_bathy.shape)*0.001\n",
+    "#     ANHA12_fpop  = np.ones(mesh_bathy.shape)*0.001\n",
+    "#     ANHA12_fpops = np.ones(mesh_bathy.shape)*0.001\n",
+    "#     ANHA12_biop  = np.ones(mesh_bathy.shape)*0.001\n",
+    "#     ANHA12_litho[:,imin:imax,jmin:jmax] = ANHA12_oMn\n",
+    "#     ANHA12_fpop[:,imin:imax,jmin:jmax]  = fpop\n",
+    "#     ANHA12_fpops[:,imin:imax,jmin:jmax] = fpops\n",
+    "#     ANHA12_biop[:,imin:imax,jmin:jmax]  = biop\n",
+    "    \n",
+    "#     folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/base/'\n",
+    "#     save_file(f'{folder}', ANHA12_litho, ANHA12_fpop, ANHA12_fpops, ANHA12_biop, year, month)\n",
+    "    \n",
+    "#     return ANHA12_litho, ANHA12_fpop"
    ]
   },
   {
@@ -300,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "54e9cb1a-44a6-4db1-a9c9-b05af5bfbbd0",
    "metadata": {},
    "outputs": [
@@ -324,18 +341,16 @@
       "2015\n",
       "2016\n",
       "2017\n",
-      "2018\n",
-      "2019\n",
-      "2020\n"
+      "2018\n"
      ]
     }
    ],
    "source": [
     "# Maximum value in file: \n",
     "n=0\n",
-    "max_bio_list   = np.empty((12*19)); max_bio_list[:]   = np.nan;\n",
-    "max_litho_list = np.empty((12*19)); max_litho_list[:] = np.nan;\n",
-    "for year in range(2002, 2021):\n",
+    "max_bio_list   = np.empty((12*17)); max_bio_list[:]   = np.nan;\n",
+    "max_litho_list = np.empty((12*17)); max_litho_list[:] = np.nan;\n",
+    "for year in range(2002, 2019):\n",
     "    print(year)\n",
     "    for month in range(1,13):\n",
     "        try:\n",
@@ -351,12 +366,14 @@
     "        max_bio_list[n]   = max_bio            \n",
     "        max_litho_list[n] = max_litho\n",
     "        \n",
-    "        n+=1"
+    "        \n",
+    "        n+=1\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "ef111897-7161-4d3e-8906-ad1a25c39ad5",
    "metadata": {},
    "outputs": [
@@ -364,7 +381,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.008565124124288559\n",
+      "0.34431931376457214\n",
       "1.8331377305003116e-07\n"
      ]
     }
@@ -372,14 +389,6 @@
    "source": [
     "print(max(max_bio_list))\n",
     "print(max(max_litho_list))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "622bd96b-a113-4394-9526-5f3878b6eb33",
-   "metadata": {},
-   "source": [
-    "*** think about why I need to run in NEMO rather than just calculating it some other way ***"
    ]
   },
   {
@@ -392,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "434d3957-2aea-4238-8706-6d76e02646cd",
    "metadata": {},
    "outputs": [
@@ -419,7 +428,8 @@
     "for year in range(2002, 2003):\n",
     "    for month in range(1,13):\n",
     "        print(year, month)\n",
-    "        litho, bio = create_particle_fields(year, month, max_bio=2.86113e-2, max_litho=1.83314e-7, save=True, beta=0.00)"
+    "#         litho, bio = create_particle_fields(year, month, max_bio=0.34432, max_litho=1.83314e-7, save=True, beta=0.00)\n",
+    "        litho, bio = create_particle_fields(year, month)"
    ]
   },
   {
