--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "placed-collectible",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "conservative-danish",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "selective-silicon",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "seventh-spare",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "located-single",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0d903d4a-ed25-457b-be76-b71e7d9d27bd",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ceb7b992-af5d-4daf-a254-2a3791343077",
    "metadata": {},
    "outputs": [],
@@ -162,16 +162,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "def5d73e-ab07-4039-b748-d9d9d33703cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_file(folder, litho_array, bio_array, year, month):   \n",
+    "def save_file(folder, particle_array, year, month):   \n",
     "    \n",
     "    file_write = xr.Dataset(\n",
-    "        {'lithogenic' : ((\"deptht\",\"y\",\"x\"), litho_array),\n",
-    "         'biogenic' : ((\"deptht\",\"y\",\"x\"), bio_array)}, \n",
+    "        {'particles' : ((\"deptht\",\"y\",\"x\"), particle_array)},\n",
     "        coords = {\n",
     "            \"time_counter\": np.zeros(1),\n",
     "            \"deptht\": depths,\n",
@@ -186,60 +185,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "13f1db7f-3cba-4cd6-8cbf-9eed4ec4dd5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_bio(year, month, return_max=False):\n",
+    "def load_bio(year, month, return_max=False, ln_fpop=False, ln_fpop_sink=False, ln_biom=False):\n",
     "    # BLING:\n",
     "    file_EPM101  = f'/data/brogalla/ANHA4/BLING-EPM101/ANHA4-EPM101_y{year}m{month:02}.nc'\n",
-    "    dset_bio     = xr.open_dataset(f'{file_EPM101}')\n",
-    "    fpop_ANHA4   = dset_bio['fpop'][:,:,:].values      # sinking particulate organic matter in phosphate units (mol P/m3)\n",
-    "    biop_ANHA4   = dset_bio['biomass_p'][:,:,:].values # biomass concentration in phosphate units (mol P/m3)\n",
-    "     \n",
-    "    # Convert sinking particulate organic matter in phosphate units by dividing by the sinking rate:\n",
-    "    # Sinking rate info comes from pg. 43-44 Laura Castro de la Guardia's thesis, same as BLING general paper\n",
-    "    wsink              = np.ones(ANHA4_depths.shape)*16/(3600*24) # convert from m/day to m/s\n",
-    "    wsink[depths > 80] = (0.05*(ANHA4_depths[ANHA4_depths > 80]-80)+16)/(3600*24) \n",
-    "    fpop_sink          = np.array([fpop_ANHA4[d,:,:] / wsink[d] for d in range(0,len(ANHA4_depths))])\n",
     "    \n",
-    "    # Fill NaN and negative values with zero:\n",
-    "    fpop_ANHA4[fpop_ANHA4 < 0]       = 0\n",
-    "    fpop_sink[fpop_sink < 0]         = 0\n",
-    "    biop_ANHA4[biop_ANHA4 < 0]       = 0\n",
-    "    fpop_ANHA4[np.isnan(fpop_ANHA4)] = np.nanmean(fpop_ANHA4)\n",
-    "    fpop_sink[np.isnan(fpop_sink)]   = np.nanmean(fpop_sink)\n",
-    "    biop_ANHA4[np.isnan(biop_ANHA4)] = np.nanmean(biop_ANHA4)\n",
-    "    \n",
-    "    # Sum fpop and biomass_p\n",
-    "    sum_bio = fpop_sink #np.add(fpop_sink, biop_ANHA4) \n",
-    "    \n",
-    "    # 1/2 power\n",
-    "    bio_nonlinear = sum_bio**(0.15)\n",
+    "    with xr.open_dataset(f'{file_EPM101}') as dset_bio:\n",
+    "        if ln_fpop or ln_fpop_sink:\n",
+    "            fpop_ANHA4   = dset_bio['fpop'][:,:,:].values      # sinking particulate organic matter in phosphate units (mol P/m3)\n",
+    "            fpop_ANHA4[fpop_ANHA4 < 0]       = 0\n",
+    "            fpop_ANHA4[np.isnan(fpop_ANHA4)] = np.nanmean(fpop_ANHA4)\n",
+    "\n",
+    "        if ln_fpop_sink:\n",
+    "            # Convert sinking particulate organic matter in phosphate units by dividing by the sinking rate:\n",
+    "            # Sinking rate info comes from pg. 43-44 Laura Castro de la Guardia's thesis, same as BLING general paper\n",
+    "            wsink              = np.ones(ANHA4_depths.shape)*16/(3600*24) # convert from m/day to m/s\n",
+    "            wsink[depths > 80] = (0.05*(ANHA4_depths[ANHA4_depths > 80]-80)+16)/(3600*24) \n",
+    "            fpop_ANHA4         = np.array([fpop_ANHA4[d,:,:] / wsink[d] for d in range(0,len(ANHA4_depths))])\n",
+    "            fpop_ANHA4[fpop_ANHA4 < 0]       = 0\n",
+    "            fpop_ANHA4[np.isnan(fpop_ANHA4)] = np.nanmean(fpop_ANHA4)\n",
+    "\n",
+    "        if ln_biom:\n",
+    "            biop_ANHA4   = dset_bio['biomass_p'][:,:,:].values # biomass concentration in phosphate units (mol P/m3)\n",
+    "            biop_ANHA4[biop_ANHA4 < 0]       = 0\n",
+    "            biop_ANHA4[np.isnan(biop_ANHA4)] = np.nanmean(biop_ANHA4)\n",
+    "\n",
+    "        if return_max:\n",
+    "            return np.amax(fpop_ANHA4*ln_fpop + fpop_ANHA4*ln_fpop_sink + biop_ANHA4*ln_biom)\n",
+    "        else:\n",
+    "            return fpop_ANHA4*ln_fpop + fpop_ANHA4*ln_fpop_sink + biop_ANHA4*ln_biom\n",
+    "\n",
+    "def interpolate_bio(bio_particles):\n",
     "    \n",
     "    # interpolate from ANHA4 to ANHA12 grid:\n",
     "    ANHA12_bio = np.empty((50,isize,jsize))\n",
     "    for depth in range(0,50):\n",
-    "        interpolator   = LinearNDInterpolator(tri, bio_nonlinear[depth,:,:].flatten())    \n",
+    "        interpolator   = LinearNDInterpolator(tri, bio_particles[depth,:,:].flatten())    \n",
     "    \n",
     "        ANHA12_bio[depth,:,:] = interpolator(np.array([ANHA12_lons.flatten(), ANHA12_lats.flatten()]).transpose()).reshape(ANHA12_lons.shape)\n",
     "\n",
-    "    if return_max:\n",
-    "        return np.amax(ANHA12_bio)\n",
-    "    else:\n",
-    "        return ANHA12_bio\n",
+    "    return ANHA12_bio\n",
     "\n",
     "def load_litho(year, month, return_max=False):\n",
     "    # Mn for surface particle field:\n",
     "    folder_Mn   = f'/data/brogalla/run_storage/Mn-extended-domain-202210/'\n",
-    "    dset_ANHA12 = xr.open_dataset(f'{folder_Mn}oMn_y{year}m{month:02}.nc')\n",
-    "    ANHA12_Mn   = dset_ANHA12['oxidismn'][:,:,:].values \n",
     "    \n",
-    "    if return_max:\n",
-    "        return np.amax(ANHA12_Mn)\n",
-    "    else:\n",
-    "        return ANHA12_Mn"
+    "    with xr.open_dataset(f'{folder_Mn}oMn_y{year}m{month:02}.nc') as dset_ANHA12:\n",
+    "        ANHA12_Mn   = dset_ANHA12['oxidismn'][:,:,:].values \n",
+    "\n",
+    "        if return_max:\n",
+    "            return np.amax(ANHA12_Mn)\n",
+    "        else:\n",
+    "            return ANHA12_Mn"
    ]
   },
   {
@@ -249,62 +250,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_particle_fields(year, month, max_bio=np.nan, max_litho=np.nan, save=False, beta=np.nan):\n",
-    "\n",
-    "    ANHA12_biogenic = load_bio(year, month)\n",
+    "def create_particle_fields(year, month, max_bio=np.nan, max_litho=np.nan, save=False, beta=np.nan, power=1,\n",
+    "                           ln_fpop=False, ln_fpop_sink=False, ln_biom=False, loc=''):\n",
+    "    \n",
+    "    # load forcing fields and interpolate to ANHA12 grid\n",
+    "    ANHA4_bio       = load_bio(year, month, ln_fpop=ln_fpop, ln_fpop_sink=ln_fpop_sink, ln_biom=ln_biom)\n",
+    "    ANHA12_biogenic = interpolate_bio(ANHA4_bio)\n",
     "    ANHA12_litho    = load_litho(year, month)\n",
     "    \n",
     "    # particles: normalize by maximum value within domain over the course of the full time series\n",
-    "    normalized_biogenic   = ANHA12_biogenic / max_bio \n",
-    "    normalized_lithogenic = ANHA12_litho / max_litho \n",
+    "    ANHA12_biogenic = ANHA12_biogenic / max_bio \n",
+    "    ANHA12_litho    = ANHA12_litho / max_litho \n",
     "    \n",
     "    # initialize arrays with some small value, then fill with normalized particle fields:\n",
-    "    lithogenic_particles = np.ones(mesh_bathy.shape)*0.01\n",
-    "    biogenic_particles   = np.ones(mesh_bathy.shape)*0.01\n",
-    "    lithogenic_particles[:,imin:imax,jmin:jmax] = normalized_lithogenic\n",
-    "    biogenic_particles[:,imin:imax,jmin:jmax]   = normalized_biogenic\n",
+    "    lithogenic_particles = np.ones(mesh_bathy.shape)*0.001\n",
+    "    biogenic_particles   = np.ones(mesh_bathy.shape)*0.001\n",
+    "    lithogenic_particles[:,imin:imax,jmin:jmax] = ANHA12_litho\n",
+    "    biogenic_particles[:,imin:imax,jmin:jmax]   = ANHA12_biogenic\n",
     "\n",
     "    # Fill any weird values \n",
     "    # https://stackoverflow.com/questions/3662361/fill-in-missing-values-with-nearest-neighbour-in-python-numpy-masked-arrays\n",
-    "    biogenic_particles_filled = fill(biogenic_particles, invalid=(biogenic_particles < 0))\n",
-    "    biogenic_particles_filled[(mesh_bathy < 0.1)]        = 0.0 # fill land with zeros\n",
+    "    biogenic_particles = fill(biogenic_particles, invalid=(biogenic_particles < 0))\n",
+    "    biogenic_particles[(mesh_bathy < 0.1)]               = 0.0 # fill land with zeros\n",
     "    lithogenic_particles[(mesh_bathy < 0.1)]             = 0.0 # fill land with zeros\n",
     "    lithogenic_particles[lithogenic_particles < 0]       = 0.0\n",
     "    lithogenic_particles[np.isnan(lithogenic_particles)] = 0.0\n",
     "    \n",
     "    if np.any(lithogenic_particles < 0):\n",
     "        print('negative lithogenic')\n",
-    "    if np.any(biogenic_particles_filled < 0):\n",
+    "    if np.any(biogenic_particles < 0):\n",
     "        print('negative biogenic')\n",
     "    \n",
     "    if save:\n",
     "        if np.isnan(beta):\n",
     "            print('need to define beta')\n",
     "        else:\n",
-    "            folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/fpop-sink-015-b05/'\n",
-    "            betas  = [0.5]#[0.005]\n",
-    "            save_file(f'{folder}', lithogenic_particles*betas[0], biogenic_particles_filled*(1-betas[0]), year, month)\n",
+    "            folder =f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/{loc}'\n",
+    "            save_file(f'{folder}', ((lithogenic_particles*beta) + (biogenic_particles*(1-beta)))**power, year, month)\n",
     "    \n",
-    "    return ANHA12_litho, ANHA12_biogenic\n",
-    "\n",
-    "# def create_particle_fields(year, month):\n",
-    "\n",
-    "#     fpop, fpops, biop = load_bio(year, month)\n",
-    "#     ANHA12_oMn        = load_litho(year, month)\n",
-    "    \n",
-    "#     ANHA12_litho = np.ones(mesh_bathy.shape)*0.001\n",
-    "#     ANHA12_fpop  = np.ones(mesh_bathy.shape)*0.001\n",
-    "#     ANHA12_fpops = np.ones(mesh_bathy.shape)*0.001\n",
-    "#     ANHA12_biop  = np.ones(mesh_bathy.shape)*0.001\n",
-    "#     ANHA12_litho[:,imin:imax,jmin:jmax] = ANHA12_oMn\n",
-    "#     ANHA12_fpop[:,imin:imax,jmin:jmax]  = fpop\n",
-    "#     ANHA12_fpops[:,imin:imax,jmin:jmax] = fpops\n",
-    "#     ANHA12_biop[:,imin:imax,jmin:jmax]  = biop\n",
-    "    \n",
-    "#     folder ='/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/base/'\n",
-    "#     save_file(f'{folder}', ANHA12_litho, ANHA12_fpop, ANHA12_fpops, ANHA12_biop, year, month)\n",
-    "    \n",
-    "#     return ANHA12_litho, ANHA12_fpop"
+    "    return lithogenic_particles, biogenic_particles"
    ]
   },
   {
@@ -317,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "54e9cb1a-44a6-4db1-a9c9-b05af5bfbbd0",
    "metadata": {},
    "outputs": [
@@ -348,32 +332,31 @@
    "source": [
     "# Maximum value in file: \n",
     "n=0\n",
-    "max_bio_list   = np.empty((12*17)); max_bio_list[:]   = np.nan;\n",
+    "max_bio_list   = np.empty((12*17)); max_bio_list[:]  = np.nan;\n",
     "max_litho_list = np.empty((12*17)); max_litho_list[:] = np.nan;\n",
+    "\n",
     "for year in range(2002, 2019):\n",
     "    print(year)\n",
     "    for month in range(1,13):\n",
     "        try:\n",
-    "            max_bio = load_bio(year, month, return_max=True)\n",
+    "            max_bio = load_bio(year, month, return_max=True, ln_fpop=False, ln_fpop_sink=True, ln_biom=True)\n",
     "        except:\n",
-    "            max_bio = np.nan\n",
+    "            max_bio = np.nan; \n",
     "            \n",
     "        try:\n",
     "            max_litho = load_litho(year, month, return_max=True)\n",
     "        except:\n",
     "            max_litho = np.nan\n",
-    "            \n",
-    "        max_bio_list[n]   = max_bio            \n",
+    "              \n",
+    "        max_bio_list[n]   = max_bio          \n",
     "        max_litho_list[n] = max_litho\n",
     "        \n",
-    "        \n",
-    "        n+=1\n",
-    "        "
+    "        n+=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "ef111897-7161-4d3e-8906-ad1a25c39ad5",
    "metadata": {},
    "outputs": [
@@ -381,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.34431931376457214\n",
+      "0.0008186082704924047\n",
       "1.8331377305003116e-07\n"
      ]
     }
@@ -401,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "434d3957-2aea-4238-8706-6d76e02646cd",
    "metadata": {},
    "outputs": [
@@ -412,15 +395,7 @@
       "2002 1\n",
       "2002 2\n",
       "2002 3\n",
-      "2002 4\n",
-      "2002 5\n",
-      "2002 6\n",
-      "2002 7\n",
-      "2002 8\n",
-      "2002 9\n",
-      "2002 10\n",
-      "2002 11\n",
-      "2002 12\n"
+      "2002 4\n"
      ]
     }
    ],
@@ -428,8 +403,9 @@
     "for year in range(2002, 2003):\n",
     "    for month in range(1,13):\n",
     "        print(year, month)\n",
-    "#         litho, bio = create_particle_fields(year, month, max_bio=0.34432, max_litho=1.83314e-7, save=True, beta=0.00)\n",
-    "        litho, bio = create_particle_fields(year, month)"
+    "        litho, bio = create_particle_fields(year, month, max_bio=8.1861e-4, max_litho=1.83314e-7, save=True, \n",
+    "                                            beta = 0.10, power=0.15, ln_fpop=False, ln_fpop_sink=True, ln_biom=True,\n",
+    "                                            loc  = 'fpops-biom-b010-p015/')"
    ]
   },
   {
