more messing around with scavenging fields

--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "placed-collectible",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "conservative-danish",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "selective-silicon",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "seventh-spare",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "located-single",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0d903d4a-ed25-457b-be76-b71e7d9d27bd",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ceb7b992-af5d-4daf-a254-2a3791343077",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "def5d73e-ab07-4039-b748-d9d9d33703cb",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "13f1db7f-3cba-4cd6-8cbf-9eed4ec4dd5d",
    "metadata": {},
    "outputs": [],
@@ -195,10 +195,9 @@
     "    file_EPM101  = f'/data/brogalla/ANHA4/BLING-EPM101/ANHA4-EPM101_y{year}m{month:02}.nc'\n",
     "    \n",
     "    with xr.open_dataset(f'{file_EPM101}') as dset_bio:\n",
-    "        if ln_fpop or ln_fpop_sink:\n",
-    "            fpop_ANHA4   = dset_bio['fpop'][:,:,:].values      # sinking particulate organic matter in phosphate units (mol P/m3)\n",
-    "            fpop_ANHA4[fpop_ANHA4 < 0]       = 0\n",
-    "            fpop_ANHA4[np.isnan(fpop_ANHA4)] = np.nanmean(fpop_ANHA4)\n",
+    "        fpop_ANHA4   = dset_bio['fpop'][:,:,:].values      # sinking particulate organic matter in phosphate units (mol P/m3)\n",
+    "        fpop_ANHA4[fpop_ANHA4 < 0]       = 0\n",
+    "        fpop_ANHA4[np.isnan(fpop_ANHA4)] = np.nanmean(fpop_ANHA4)\n",
     "\n",
     "        if ln_fpop_sink:\n",
     "            # Convert sinking particulate organic matter in phosphate units by dividing by the sinking rate:\n",
@@ -209,10 +208,9 @@
     "            fpop_ANHA4[fpop_ANHA4 < 0]       = 0\n",
     "            fpop_ANHA4[np.isnan(fpop_ANHA4)] = np.nanmean(fpop_ANHA4)\n",
     "\n",
-    "        if ln_biom:\n",
-    "            biop_ANHA4   = dset_bio['biomass_p'][:,:,:].values # biomass concentration in phosphate units (mol P/m3)\n",
-    "            biop_ANHA4[biop_ANHA4 < 0]       = 0\n",
-    "            biop_ANHA4[np.isnan(biop_ANHA4)] = np.nanmean(biop_ANHA4)\n",
+    "        biop_ANHA4   = dset_bio['biomass_p'][:,:,:].values # biomass concentration in phosphate units (mol P/m3)\n",
+    "        biop_ANHA4[biop_ANHA4 < 0]       = 0\n",
+    "        biop_ANHA4[np.isnan(biop_ANHA4)] = np.nanmean(biop_ANHA4)\n",
     "\n",
     "        if return_max:\n",
     "            return np.amax(fpop_ANHA4*ln_fpop + fpop_ANHA4*ln_fpop_sink + biop_ANHA4*ln_biom)\n",
@@ -245,13 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_particle_fields(year, month, max_bio=np.nan, max_litho=np.nan, save=False, beta=np.nan, power=1,\n",
-    "                           ln_fpop=False, ln_fpop_sink=False, ln_biom=False, loc=''):\n",
+    "                           ln_fpop=False, ln_fpop_sink=False, ln_biom=False, loc='', threshold=False):\n",
     "    \n",
     "    # load forcing fields and interpolate to ANHA12 grid\n",
     "    ANHA4_bio       = load_bio(year, month, ln_fpop=ln_fpop, ln_fpop_sink=ln_fpop_sink, ln_biom=ln_biom)\n",
@@ -286,7 +284,12 @@
     "            print('need to define beta')\n",
     "        else:\n",
     "            folder =f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/{loc}'\n",
-    "            save_file(f'{folder}', ((lithogenic_particles*beta) + (biogenic_particles*(1-beta)))**power, year, month)\n",
+    "            if threshold:\n",
+    "                particles = ((lithogenic_particles*beta) + (biogenic_particles*(1-beta)))**power\n",
+    "                particles[particles < 0.002] = 0.002\n",
+    "                save_file(f'{folder}', particles, year, month)\n",
+    "            else:\n",
+    "                save_file(f'{folder}', ((lithogenic_particles*beta) + (biogenic_particles*(1-beta)))**power, year, month)\n",
     "    \n",
     "    return lithogenic_particles, biogenic_particles"
    ]
@@ -301,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "54e9cb1a-44a6-4db1-a9c9-b05af5bfbbd0",
    "metadata": {},
    "outputs": [
@@ -356,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "ef111897-7161-4d3e-8906-ad1a25c39ad5",
    "metadata": {},
    "outputs": [
@@ -384,8 +387,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "434d3957-2aea-4238-8706-6d76e02646cd",
+   "execution_count": 54,
+   "id": "008fe938-ab15-43c1-9a48-06827840a50d",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +398,15 @@
       "2002 1\n",
       "2002 2\n",
       "2002 3\n",
-      "2002 4\n"
+      "2002 4\n",
+      "2002 5\n",
+      "2002 6\n",
+      "2002 7\n",
+      "2002 8\n",
+      "2002 9\n",
+      "2002 10\n",
+      "2002 11\n",
+      "2002 12\n"
      ]
     }
    ],
@@ -404,8 +415,37 @@
     "    for month in range(1,13):\n",
     "        print(year, month)\n",
     "        litho, bio = create_particle_fields(year, month, max_bio=8.1861e-4, max_litho=1.83314e-7, save=True, \n",
-    "                                            beta = 0.10, power=0.15, ln_fpop=False, ln_fpop_sink=True, ln_biom=True,\n",
-    "                                            loc  = 'fpops-biom-b010-p015/')"
+    "                                            beta = 0.01, power=0.15, ln_fpop=False, ln_fpop_sink=True, ln_biom=True,\n",
+    "                                            loc  = 'fpops-biom-b001-p015-threshold0002/', threshold=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "547f205f-a107-4936-b48a-64f0d8070976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/fpops-biom-b001-p015/Pb_scavenging_y2002m09.nc')\n",
+    "part = d['particles'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "7b5de379-81b6-414e-a75b-6404e3ce6e96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8785949189427935 0.0 0.12173900027079215\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.amax(part[:,imin:imax,jmin:jmax]), np.amin(part[:,imin:imax,jmin:jmax]), np.mean(part[:,imin:imax,jmin:jmax]))"
    ]
   },
   {
