can now loop over parameters and create pdf of predictions

--- a/paper3/scavenging-trials/scavenging-predictions.ipynb
+++ b/paper3/scavenging-trials/scavenging-predictions.ipynb
@@ -27,6 +27,7 @@
     "import cmocean\n",
     "import pickle\n",
     "from matplotlib.colors import ListedColormap\n",
+    "import matplotlib.backends.backend_pdf\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +273,7 @@
     "    ax.xaxis.set_label_position('top') \n",
     "    \n",
     "    if legend:\n",
-    "        ax.legend(loc=4, fontsize=6, frameon=False)\n",
+    "        ax.legend(loc=(-0.35, 0.98), fontsize=6, frameon=False)\n",
     "        \n",
     "    ax.set_title(title, fontsize=7)\n",
     "    return"
@@ -280,26 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_kscav(ln_fpop=False, ln_fpop_sink=True, ln_biomass=True, beta=0.005, power=1):\n",
-    "    # beta --- fraction lithogenic\n",
-    "    \n",
-    "    litho_particles_norm = (oMn[:,:,:,:]/np.nanmax(oMn[:,:,:,:]))\n",
-    "    bio_particles        = ln_fpop*fpop[:,:,:,:] + ln_fpop_sink*fpops[:,:,:,:] + ln_biomass*biom[:,:,:,:]\n",
-    "    bio_particles_norm   = bio_particles/np.nanmax(bio_particles)\n",
-    "    bio_particles_norm[bio_particles_norm < 0] = 0\n",
-    "    \n",
-    "    particles            = litho_particles_norm*beta + (1-beta)*bio_particles_norm\n",
-    "    part_scav            = particles**power\n",
-    "    return part_scav"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,6 +302,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_regional_tau(tau, keys=['','','','']):\n",
+    "    \n",
+    "    fig, ax = plt.subplots(1, 4, figsize=(8,3), dpi=300)\n",
+    "\n",
+    "    fig.suptitle(f'p = {keys[0].split(\"-b\")[0][1:]}', fontsize=7, fontweight='bold')\n",
+    "\n",
+    "    for i, axis in enumerate(ax.ravel()):\n",
+    "        axis.set_ylim(2500,0);\n",
+    "        axis.set_xlim(0,np.nanmax(tau[f'{keys[i]}'][0][0]));\n",
+    "        axis.set_xlabel('Residence time (years)', fontsize=6)\n",
+    "\n",
+    "    ax[0].set_ylabel('Depth [m]', fontsize=6)\n",
+    "    plot_regional(ax[0], tau[f'{keys[0]}'], f'beta={keys[0].split(\"-b\")[1]}', legend=True)\n",
+    "    plot_regional(ax[1], tau[f'{keys[1]}'], f'beta={keys[1].split(\"-b\")[1]}')\n",
+    "    plot_regional(ax[2], tau[f'{keys[2]}'], f'beta={keys[2].split(\"-b\")[1]}')\n",
+    "    plot_regional(ax[3], tau[f'{keys[3]}'], f'beta={keys[3].split(\"-b\")[1]}')\n",
+    "\n",
+    "    left, bottom, width, height = [0.11, 0.1, 0.06, 0.23]\n",
+    "    ax1 = fig.add_axes([left, bottom, width, height]);\n",
+    "    ax2 = fig.add_axes([left*3.2, bottom, width, height]);\n",
+    "    ax3 = fig.add_axes([left*5.4, bottom, width, height]);\n",
+    "    ax4 = fig.add_axes([left*7.5, bottom, width, height]); \n",
+    "    plot_regional(ax1, tau[f'{keys[0]}'], '')\n",
+    "    plot_regional(ax2, tau[f'{keys[1]}'], '')\n",
+    "    plot_regional(ax3, tau[f'{keys[2]}'], '')\n",
+    "    plot_regional(ax4, tau[f'{keys[3]}'], '')\n",
+    "\n",
+    "    for i,axis in enumerate([ax1,ax2,ax3,ax4]):\n",
+    "        axis.set_ylim(60,0);     \n",
+    "#         axis.set_xlim(0, np.nanmax(tau[f'{keys[i]}'][0][0][0:18]))\n",
+    "        axis.set_xlim(0,1)\n",
+    "        axis.locator_params(axis='x', nbins=5)\n",
+    "        for label in axis.get_xticklabels()[::2]:\n",
+    "            label.set_visible(False)\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_kscav(ln_fpop=False, ln_fpop_sink=True, ln_biomass=True, beta=0.005, power=1):\n",
+    "    # beta --- fraction lithogenic\n",
+    "    \n",
+    "    litho_particles_norm = (oMn[:,:,:,:]/np.nanmax(oMn[:,:,:,:]))\n",
+    "    bio_particles        = ln_fpop*fpop[:,:,:,:] + ln_fpop_sink*fpops[:,:,:,:] + ln_biomass*biom[:,:,:,:]\n",
+    "    bio_particles_norm   = bio_particles/np.nanmax(bio_particles)\n",
+    "    bio_particles_norm[bio_particles_norm < 0] = 0\n",
+    "    \n",
+    "#     particles            = litho_particles_norm*beta + (1-beta)*(bio_particles_norm)/(np.amax(bio_particles_norm)**(1-power))\n",
+    "    particles            = litho_particles_norm*beta + (1-beta)*(bio_particles_norm)\n",
+    "    part_scav            = particles**power\n",
+    "    return part_scav"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -328,14 +375,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use method 1 with k = 4e-5, beta = 0.005, 0.01, 0.05, 0.10, power=0.15, 0.50 to check residence time profiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "power_exps = [0.15, 0.5] #[0.15, 0.25, 0.5, 1.0]\n",
+    "betas      = [0.005, 0.01, 0.05, 0.10]\n",
+    "\n",
+    "kscav     = {}\n",
+    "tau       = {}\n",
+    "for p in power_exps:    \n",
+    "    for b in betas:\n",
+    "        kscav[f'p{p}-b{b}'] = calc_kscav(beta=b, power=p)\n",
+    "        tau[f'p{p}-b{b}']   = calc_residence_time_kscav(kscav[f'p{p}-b{b}'], k=4e-5, regional=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = {}\n",
+    "for power in power_exps:\n",
+    "    fig[f'p{power}'] = plot_regional_tau(tau, keys=[f'p{power}-b{betas[0]}',f'p{power}-b{betas[1]}',\n",
+    "                                                    f'p{power}-b{betas[2]}',f'p{power}-b{betas[3]}'])    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kscav1 = calc_kscav(beta=0.005, power=0.25)\n",
-    "kscav2 = calc_kscav(beta=0.01,  power=0.25)\n",
-    "kscav3 = calc_kscav(beta=0.05,  power=0.25)\n",
-    "kscav4 = calc_kscav(beta=0.10,  power=0.25)"
+    "# kscav1 = calc_kscav(beta=0.005, power=0.25)\n",
+    "# kscav2 = calc_kscav(beta=0.01,  power=0.25)\n",
+    "# kscav3 = calc_kscav(beta=0.05,  power=0.25)\n",
+    "# kscav4 = calc_kscav(beta=0.10,  power=0.25)"
    ]
   },
   {
@@ -344,10 +429,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tau1   = calc_residence_time_kscav(kscav1/np.amax(kscav1), k=5e-8, regional=True) # scales it so that residence time is never < 0.6 yr\n",
-    "tau2   = calc_residence_time_kscav(kscav2/np.amax(kscav2), k=5e-8, regional=True) # set by the value of k. Maybe that is a reasonable\n",
-    "tau3   = calc_residence_time_kscav(kscav3/np.amax(kscav3), k=5e-8, regional=True) # way to scale the range of kscav values covered\n",
-    "tau4   = calc_residence_time_kscav(kscav4/np.amax(kscav4), k=5e-8, regional=True)"
+    "# tau1   = calc_residence_time_kscav(kscav1/np.amax(kscav1), k=5e-8, regional=True) # scales it so that residence time is never < 0.6 yr\n",
+    "# tau2   = calc_residence_time_kscav(kscav2/np.amax(kscav2), k=5e-8, regional=True) # set by the value of k. Maybe that is a reasonable\n",
+    "# tau3   = calc_residence_time_kscav(kscav3/np.amax(kscav3), k=5e-8, regional=True) # way to scale the range of kscav values covered\n",
+    "# tau4   = calc_residence_time_kscav(kscav4/np.amax(kscav4), k=5e-8, regional=True)"
    ]
   },
   {
@@ -359,15 +444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.backends.backend_pdf\n",
-    "# pdf = matplotlib.backends.backend_pdf.PdfPages(\"/ocean/brogalla/GEOTRACES/figiures/output.pdf\")\n",
-    "# for fig in xrange(1, figure().number): ## will open an empty extra figure :(\n",
-    "#     pdf.savefig(fig)\n",
-    "# pdf.close()"
+    "pdf = matplotlib.backends.backend_pdf.PdfPages(\"/ocean/brogalla/GEOTRACES/figures/Pb-scavenging-tuning-check.pdf\")\n",
+    "for power in power_exps:\n",
+    "    pdf.savefig(fig[f'p{power}'])\n",
+    "pdf.close()"
    ]
   },
   {
