--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -167,10 +167,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def save_file(folder, particle_array, year, month):   \n",
+    "    \n",
+    "#     file_write = xr.Dataset(\n",
+    "#         {'particles' : ((\"deptht\",\"y\",\"x\"), particle_array)},\n",
+    "#         coords = {\n",
+    "#             \"time_counter\": np.zeros(1),\n",
+    "#             \"deptht\": depths,\n",
+    "#             \"y\": np.zeros(mesh_lat.shape[0]),\n",
+    "#             \"x\": np.zeros(mesh_lon.shape[1])},\n",
+    "#     )\n",
+    "#     file_write.to_netcdf(f'{folder}Pb_scavenging_y{year}m{month:02}.nc', \\\n",
+    "#                          unlimited_dims='time_counter')\n",
+    "\n",
+    "#     return\n",
     "def save_file(folder, particle_array, year, month):   \n",
     "    \n",
     "    file_write = xr.Dataset(\n",
-    "        {'particles' : ((\"deptht\",\"y\",\"x\"), particle_array)},\n",
+    "        {'oxidisMn' : ((\"deptht\",\"y\",\"x\"), particle_array),\n",
+    "         'fpop'     : ((\"deptht\",\"y\",\"x\"), particle_array),\n",
+    "         'fpop-sink': ((\"deptht\",\"y\",\"x\"), particle_array),\n",
+    "         'biomass'  : ((\"deptht\",\"y\",\"x\"), particle_array)},\n",
     "        coords = {\n",
     "            \"time_counter\": np.zeros(1),\n",
     "            \"deptht\": depths,\n",
@@ -185,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "13f1db7f-3cba-4cd6-8cbf-9eed4ec4dd5d",
    "metadata": {},
    "outputs": [],
@@ -243,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
    "metadata": {},
    "outputs": [],
